--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/index.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/index.html.twig
@@ -7,9 +7,10 @@
     <title>{% block title %}Welcome to our BACKEND Shop!{% endblock %}</title>
     {% block stylesheets %}
         <!-- Bootstrap Core CSS -->
-        <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet">
+       {# <link href="{{ asset('css/bootstrap.min.css') }}" rel="stylesheet"> #}
 
         <!-- Custom CSS -->
+        <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet">
         <link href="{{ asset('css/shop-homepage.css') }}" rel="stylesheet">
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -29,10 +30,10 @@
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="{{ path('music_shop_backend_homepage') }}">Music-Shop - BACKEND</a>
+                      {#  <a class="navbar-brand" href="{{ path('music_shop_backend_homepage') }}">Music-Shop - BACKEND</a> #}
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    {#  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li>
                                 <a href="{{ path('music_shop_backend_albums') }}">Discos</a>
@@ -44,7 +45,7 @@
                                 <a href="{{ path('music_shop_backend_artists') }}">Artistes</a>
                             </li>
                         </ul>
-                    </div>
+                    </div>#}
                     <!-- /.navbar-collapse -->
                 </div>
                 <!-- /.container -->
