--- a/TallerReparacions/src/TallerReparacio/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/TallerReparacions/src/TallerReparacio/FrontendBundle/Resources/views/Default/index.html.twig
@@ -39,24 +39,24 @@
                         {# <!--<a class="navbar-brand" href="{{ path('music_shop_frontend_homepage') }}">Music-Shop</a>--> #}
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
-                    <!--
+                   
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li>
-                               {#  <a href="{{ path('music_shop_frontend_albums') }}">Discos</a> #}
+                               {#  <a href="{{ path('music_shop_frontend_albums') }}">Discos</a> #}asdf
                             </li>
                             <li>
-                               {#  <a href="{{ path('music_shop_frontend_categories') }}">Categories</a> #}
+                               {#  <a href="{{ path('music_shop_frontend_categories') }}">Categories</a> #}asdf
                             </li>
                             <li>
-                               {#  <a href="{{ path('music_shop_frontend_artists') }}">Artistes</a> #}
+                               {#  <a href="{{ path('music_shop_frontend_artists') }}">Artistes</a> #}asdf
                             </li>
                             <li>
-                               {#  <a href="{{ path('music_shop_frontend_contact_form') }}">Contacte</a> #}
+                               {#  <a href="{{ path('music_shop_frontend_contact_form') }}">Contacte</a> #}asdf
                             </li>
                         </ul>
                     </div>
-                -->
+                
                     <!-- /.navbar-collapse -->
                 </div>
                 <!-- /.container -->
