Modificació índex frontend

--- a/TallerReparacions/src/TallerReparacio/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/TallerReparacions/src/TallerReparacio/FrontendBundle/Resources/views/Default/index.html.twig
@@ -43,16 +43,16 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
                             <li>
-                               {#  <a href="{{ path('music_shop_frontend_albums') }}">Discos</a> #}asdf
+                               {#  <a href="{{ path('music_shop_frontend_albums') }}">Discos</a> #}<a href="#">asdf</a>
                             </li>
                             <li>
-                               {#  <a href="{{ path('music_shop_frontend_categories') }}">Categories</a> #}asdf
+                               {#  <a href="{{ path('music_shop_frontend_categories') }}">Categories</a> #}<a href="#">asdf</a>
                             </li>
                             <li>
-                               {#  <a href="{{ path('music_shop_frontend_artists') }}">Artistes</a> #}asdf
+                               {#  <a href="{{ path('music_shop_frontend_artists') }}">Artistes</a> #}<a href="#">asdf</a>
                             </li>
                             <li>
-                               {#  <a href="{{ path('music_shop_frontend_contact_form') }}">Contacte</a> #}asdf
+                               {#  <a href="{{ path('music_shop_frontend_contact_form') }}">Contacte</a> #}<a href="#">asdf</a>
                             </li>
                         </ul>
                     </div>
