Canvi de containerfluid a container

--- a/TallerReparacions/app/Resources/views/base.html.twig
+++ b/TallerReparacions/app/Resources/views/base.html.twig
@@ -33,7 +33,7 @@
     </div>
     </nav>
 
-    <div id="container-fluid">
+    <div id="container">
         {% block page_content %}
         {% endblock %}
 
