Form Afegir client v0.2

--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formAfegirClient.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formAfegirClient.html.twig
@@ -1,7 +1,7 @@
 {% extends "TallerReparacioBackendBundle:Default:index.html.twig " %}
 {% block title %}Afegir Client{% endblock %}
 {% block page_content %}
-<form action="{{ path('taller_reparacio_backend_afegir_clients') }}">
+<form action="{{ path('taller_reparacio_backend_formAfegir_clients') }}">
 	<input type="text" name="nif"><br/>
 	<input type="text" name="nom"></br>
 	<input type="text" name="cognom"></br>
@@ -9,5 +9,6 @@
 	<input type="text" name="marca"></br>
 	<input type="text" name="model"></br>
 	<input type="text" name="tipusCombustible"></br>
+	<input type="submit" name="submit" value="Submit">
 </form>
 {% endblock %}
