Aplicació Bootstrap Formulari

--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formAfegirClient.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formAfegirClient.html.twig
@@ -1,14 +1,26 @@
 {% extends "TallerReparacioBackendBundle:Default:index.html.twig " %}
 {% block title %}Afegir Client{% endblock %}
 {% block page_content %}
-<form action="{{ path('taller_reparacio_backend_formAfegir_clients') }}">
-	<input type="text" name="nif"><br/>
-	<input type="text" name="nom"></br>
-	<input type="text" name="cognom"></br>
-	<input type="text" name="matricula"></br>
-	<input type="text" name="marca"></br>
-	<input type="text" name="model"></br>
-	<input type="text" name="tipusCombustible"></br>
-	<input type="submit" name="submit" value="Submit">
+<div class="container-fluid">
+    <div class="container">
+        <div class="contingut row">
+            <div class="col-xs-12">
+	<form action="{{ path('taller_reparacio_backend_formAfegir_clients') }}" method="post">
+		<div class="form-grup">
+	<h1>Afegir Client</h1></br>
+	NIF: <input class="form-control" type="text" name="nif"><br/>
+	Nom: <input class="form-control" type="text" name="nom"></br>
+	Cognom: <input class="form-control" type="text" name="cognom"></br></br>
+	<h2>Dades Vehicle Client</h2></br>
+	Matricula: <input class="form-control" type="text" name="matricula"></br>
+	Marca: <input class="form-control" type="text" name="marca"></br>
+	Model: <input class="form-control" type="text" name="model"></br>
+	Tipus Combustible: <input class="form-control" type="text" name="tipusCombustible"></br>
+	<input type="submit" name="submit" value="Afegir">
+	</div>
 </form>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
