Path al nav del inici

--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/index.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
         {{ parent() }} 
     {% endblock %}
         {% block navigation %}
-            <li class="active"><a href="#">Inici</a></li>
+            <li class="active"><a href="{{ path('taller_reparacio_backend_homepage') }}">Inici</a></li>
               <li><a href="{{ path('taller_reparacio_backend_formAfegir_clients') }}">Clients</a><li>
               <li><a href="#">Vehicles</a></li>
               <li><a href="#">Reparacions</a></li>
