Button del formulari en bootstrap

--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formAfegirClient.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formAfegirClient.html.twig
@@ -16,7 +16,7 @@
 	Marca: <input class="form-control" type="text" name="marca"></br>
 	Model: <input class="form-control" type="text" name="model"></br>
 	Tipus Combustible: <input class="form-control" type="text" name="tipusCombustible"></br>
-	<input type="submit" name="submit" value="Afegir">
+	<input class="btn btn-default" type="submit" name="submit" value="Afegir">
 	</div>
 </form>
             </div>
