Referencies DB i edicions formulari i el controlador d'aquest

--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formAfegirClient.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formAfegirClient.html.twig
@@ -10,7 +10,8 @@
 								<h1>Afegir Client</h1></br>
 								NIF: <input class="form-control" type="text" name="nif"><br/>
 								Nom: <input class="form-control" type="text" name="nom"></br>
-								Cognom: <input class="form-control" type="text" name="cognom"></br></br>
+								Cognom: <input class="form-control" type="text" name="cognom"></br>
+								Foto: <input class="form-control" type="text" name="foto"></br>
 								<h2>Dades Vehicle Client</h2></br>
 								Matricula: <input class="form-control" type="text" name="matricula"></br>
 								Marca: <input class="form-control" type="text" name="marca"></br>
