--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/index.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/index.html.twig
@@ -7,7 +7,7 @@
         {% block navigation %}
             <li class="active"><a href="{{ path('taller_reparacio_backend_homepage') }}">Inici</a></li>
               <li><a href="{{ path('taller_reparacio_backend_consultar_clients') }}">Clients</a><li>
-              <li><a href="#">Vehicles</a></li>
+              <li><a href="{{ path('taller_reparacio_backend_consultar_vehicles') }}">Vehicles</a></li>
               <li><a href="#">Reparacions</a></li>
               <li><a href="#">Mecànics</a></li>
               <li><a href="#">Equip Mecànics</a></li>
