--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/clientAdded.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/clientAdded.html.twig
@@ -7,8 +7,10 @@
             <div class="col-sm-12 col-lg-12 col-md-12">
                 <h4 class="">{{ titol }}</h4>
             </div>
-            <div class="col-sm-12 col-lg-12 col-md-12">
-                Nom: {{ name|upper }}
+            <div class="col-sm-3 col-lg-3 col-md-3 text-center">
+                <img class="img-responsive" src={{ client.foto }} style="width:100%;" />
+                <h3>{{ client.nom }} {{ client.cognom }}</h3>
+                <p>{{ client.nif }}</p>
             </div>
         </div>
     </div>
