CRUD VEHICLES QUASI ACAVATS

--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formEditarClient.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formEditarClient.html.twig
@@ -6,7 +6,7 @@
 			<div class="col-xs-12">
 				<form action="{{ path('taller_reparacio_backend_editar_clients') }}" method="post">
 					<div class="form-grup">
-						<h1>{{ titol }}</h1></br>
+						<h2>{{ titol }}</h2>
 						NIF: <input class="form-control" type="text" name="nif" readonly value="{{ client.nif }}"><br/>
 						Nom: <input class="form-control" type="text" name="nom" value="{{ client.nom }}"></br>
 						Cognom: <input class="form-control" type="text" name="cognom" value="{{ client.cognom }}"></br>
