--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/clients.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/clients.html.twig
@@ -11,10 +11,10 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12 col-lg-12 col-md-12">
-            <a href="{{ path('taller_reparacio_backend_formAfegir_clients') }}" class="btn btn-success">Afegir Client</a>
+            <a href="{{ path('taller_reparacio_backend_formAfegir_clients') }}" class="btn btn-success">Afegir nou Client</a>
         </div>
         <div class="col-sm-12 col-lg-12 col-md-12">
-            <h4 class="">{{ titol }}</h4>
+            <h2 class="">{{ titol }}</h2>
         </div>
         {% for c in clients %}
             <div class="col-sm-3 col-lg-3 col-md-3 text-center">
