--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formAfegirClient.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formAfegirClient.html.twig
@@ -1,17 +1,17 @@
 {% extends "TallerReparacioBackendBundle:Default:index.html.twig " %}
-{% block title %}Afegir Client{% endblock %}
+{% block title %}Afegir Client i Vehicle{% endblock %}
 {% block page_content %}
 	<div class="container">
 		<div class="contingut row">
 			<div class="col-xs-12">
 				<form action="{{ path('taller_reparacio_backend_afegir_clients') }}" method="post">
 					<div class="form-grup">
-						<h1>Afegir Client</h1></br>
+						<h2>Dades Client</h2>
 						NIF: <input class="form-control" type="text" name="nif"><br/>
 						Nom: <input class="form-control" type="text" name="nom"></br>
 						Cognom: <input class="form-control" type="text" name="cognom"></br>
 						Foto: <input class="form-control" type="text" name="foto"></br>
-						<h2>Dades Vehicle Client</h2></br>
+						<h2>Dades Vehicle</h2>
 						Matricula: <input class="form-control" type="text" name="matricula"></br>
 						Marca: <input class="form-control" type="text" name="marca"></br>
 						Model: <input class="form-control" type="text" name="model"></br>
