CRUD Cotxe PERFECTE pk ho he fet jo

--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/vehicles.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/vehicles.html.twig
@@ -11,7 +11,7 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-12 col-lg-12 col-md-12">
-            <a href="#" class="btn btn-success">Afegir nou Vehicle</a>
+            <a href="{{ path('taller_reparacio_backend_formAfegir_clients') }}" class="btn btn-success">Afegir Vehicle i Client</a>
         </div>
         <div class="col-sm-12 col-lg-12 col-md-12">
             <h2 class="">{{ titol }}</h2>
