--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/vehicleAdded.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/vehicleAdded.html.twig
@@ -8,9 +8,9 @@
                 <h3 class="">{{ titol }}</h3>
             </div>
             <div class="col-sm-3 col-lg-3 col-md-3 text-center">
-                <img class="img-responsive" src={{ client.foto }} style="width:100%;" />
-                <h3>{{ client.nom }} {{ client.cognom }}</h3>
-                <p>{{ client.nif }}</p>
+                <img class="img-responsive" src="https://static.webshopapp.com/shops/031349/files/022902189/other-1.png" style="width:100%;" />
+                <h3>{{ vehicle.marca }} {{ vehicle.model }}</h3>
+                <p>{{ vehicle.matricula }}</p>
             </div>
         </div>
     </div>
