--- a/TallerReparacions/src/TallerReparacio/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/TallerReparacions/src/TallerReparacio/FrontendBundle/Resources/views/Default/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block navigation %}
 	<li><a href="{{ path('taller_reparacio_frontend_homepage') }}">Inici</a></li>
-	<li><a href="#">Historic</a></li>
+	<li><a style="color:red;" href="#">Historic</a></li>
 	<li><a href="{{ path('taller_reparacio_backend_homepage') }}">login</a></li>
 {% endblock %}
 {% block page_content %}
