--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/clientAdded.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/clientAdded.html.twig
@@ -1,17 +1,22 @@
 {% extends "TallerReparacioBackendBundle:Default:index.html.twig " %}
 {% block title %}BACKEND - Categoria Afegida{% endblock %}
-{% block page_content %}
-    <!-- Page Content -->
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12 col-lg-12 col-md-12">
-                <h3 class="">{{ titol }}</h3>
+    {% block page_content %}
+        <!-- Page Content -->
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 col-lg-12 col-md-12">
+                    <h3 class="">{{ titol }}</h3>
+                </div>
+                <div class="col-sm-3 col-lg-3 col-md-3 text-center">
+                    <img class="img-responsive" src={{ client.foto }} style="width:100%;" />
+                    <h3>{{ client.nom }} {{ client.cognom }}</h3>
+                    <p>{{ client.nif }}</p>
+                </div>
+                <div class="col-sm-3 col-lg-3 col-md-3 text-center">  
+                    <img class="img-responsive" src="https://static.webshopapp.com/shops/031349/files/022902189/other-1.png" style="width:100%;" />
+                    <h3>{{vehicle.marca }} {{ vehicle.model }}</h3>
+                    <p>{{ vehicle.matricula}}
+                    </div>
+                </div>
             </div>
-            <div class="col-sm-3 col-lg-3 col-md-3 text-center">
-                <img class="img-responsive" src={{ client.foto }} style="width:100%;" />
-                <h3>{{ client.nom }} {{ client.cognom }}</h3>
-                <p>{{ client.nif }}</p>
-            </div>
-        </div>
-    </div>
-{% endblock %}
+        {% endblock %}
