Reparacions preparat pk peti el programa
PER CULPA DEN BERNABÉ

--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/index.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/index.html.twig
@@ -8,7 +8,7 @@
         <li><a href="{{ path('taller_reparacio_backend_homepage') }}">Inici</a></li>
           <li><a href="{{ path('taller_reparacio_backend_consultar_clients') }}">Clients</a><li>
           <li><a href="{{ path('taller_reparacio_backend_consultar_vehicles') }}">Vehicles</a></li>
-          <li><a style="color:red;" href="#">Reparacions</a></li>
+          <li><a href="{{ path('taller_reparacio_backend_consultar_reparacions') }}">Reparacions</a></li>
           <li><a style="color:red;" href="#">Mecànics</a></li>
           <li><a style="color:red;" href="#">Equip Mecànics</a></li>
           <li><a href="{{ path('taller_reparacio_frontend_homepage') }}">Logout</a></li>
