--- a/TallerReparacions/src/TallerReparacio/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/TallerReparacions/src/TallerReparacio/FrontendBundle/Resources/views/Default/index.html.twig
@@ -6,7 +6,7 @@
 {% block navigation %}
 	<li><a href="{{ path('taller_reparacio_frontend_homepage') }}">Inici</a></li>
 	<li><a style="color:red;" href="#">Historic</a></li>
-	<li><a href="{{ path('taller_reparacio_backend_homepage') }}">login</a></li>
+	<li><a href="{{ path('taller_reparacio_frontend_formLogin') }}">Login</a></li>
 {% endblock %}
 {% block page_content %}
 Aixo es el frontend
