--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/loginSatisfactori.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/loginSatisfactori.html.twig
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-lg-12 col-md-12">
-                    <h3 class="">{{ titol }} {{ username }}</h3>
+                    <h3 class="">{{ titol }} {{ usuari }}</h3>
                 </div>
             </div>
         </div>
