--- a/TallerReparacions/app/Resources/views/base.html.twig
+++ b/TallerReparacions/app/Resources/views/base.html.twig
@@ -15,7 +15,7 @@
 <body>
 
   <nav class="navbar navbar-default">
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-color:lightblue;">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
           <span class="sr-only">Toggle navigation</span>
@@ -38,7 +38,8 @@
         {% endblock %}
 
     </div>
-    <footer style="margin-top:40px;">
+    <footer style="margin-top:40px;background-color:#B0C4DE;padding:30px;">
+        <small>© Copyright 2017, Taller Reparacions</small>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </footer>
 </body>
