--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/clientAndVehicleAdded.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/clientAndVehicleAdded.html.twig
@@ -12,5 +12,11 @@
                     <h3>{{ client.nom }} {{ client.cognom }}</h3>
                     <p>{{ client.nif }}</p>
                 </div>
+                <div class="col-sm-3 col-lg-3 col-md-3 text-center">
+                    <img class="img-responsive" src="https://static.webshopapp.com/shops/031349/files/022902189/other-1.png" style="width:100%;" />
+                    <h3>{{ vehicle.marca }} {{ vehicle.model }}</h3>
+                    <p>{{ vehicle.matricula }}</p>
+                </div>
             </div>
+        </div>
         {% endblock %}
