--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/index.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/index.html.twig
@@ -15,5 +15,7 @@
       {% endblock %}
 
       {% block page_content %}
-        <p> Això es el Backend </p>
+        <div class="container">
+          Això és el Backend
+        </div>
       {% endblock %}
