--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/clientAndVehicleNotAdded.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/clientAndVehicleNotAdded.html.twig
@@ -1,5 +1,5 @@
 {% extends "TallerReparacioBackendBundle:Default:index.html.twig " %}
-{% block title %}Client modificat{% endblock %}
+{% block title %}Client No modificat{% endblock %}
     {% block page_content %}
         <!-- Page Content -->
         <div class="container">
@@ -7,10 +7,6 @@
                 <div class="col-sm-12 col-lg-12 col-md-12">
                     <h3 class="">{{ titol }}</h3>
                 </div>
-                <div class="col-sm-3 col-lg-3 col-md-3 text-center">
-                    <img class="img-responsive" src={{ client.foto }} style="width:100%;" />
-                    <h3>{{ client.nom }} {{ client.cognom }}</h3>
-                    <p>{{ client.nif }}</p>
-                </div>
             </div>
+        </div>
         {% endblock %}
