--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/vehicleAdded.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/vehicleAdded.html.twig
@@ -1,5 +1,5 @@
 {% extends "TallerReparacioBackendBundle:Default:index.html.twig " %}
-{% block title %}BACKEND - Categoria Afegida{% endblock %}
+{% block title %}Vehicle afegit{% endblock %}
 {% block page_content %}
     <!-- Page Content -->
     <div class="container">
