--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/vehicles.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/vehicles.html.twig
@@ -17,12 +17,12 @@
             <h2 class="">{{ titol }}</h2>
         </div>
         {% for v in vehicles %}
-            <div class="col-sm-3 col-lg-3 col-md-3 text-center">
+            <div class="col-sm-3 col-lg-3 col-md-3 text-center" style="margin-bottom:20px;">
                 <img class="img-responsive" src="https://static.webshopapp.com/shops/031349/files/022902189/other-1.png" style="width:100%;" />
                 <h3>{{ v.marca }} {{ v.model }}</h3>
                 <p>{{ v.matricula }}</p>
                 <a class="btn btn-primary" href="{{ path('taller_reparacio_backend_formEditar_vehicles', {matricula:v.matricula}) }}">Editar</a>
-                <a class="btn btn-danger" href="{{ path('taller_reparacio_backend_eliminar_vehicles', {matricula:v.matricula}) }}">Eliminar</a>
+                <a class="btn btn-danger" href="{{ path('taller_reparacio_backend_eliminar_vehicles', {matricula:v.matricula}) }}" onclick="confirm('Estàs segur?')">Eliminar</a>
             </div>
         {% endfor %}
     </div>
