NAV - Backend & Frontend
Pestanya "Taller Reparacions" Ja porta a la pàgina principal adecuada.

--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/index.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/index.html.twig
@@ -4,18 +4,21 @@
   {% block stylesheets %}
     {{ parent() }} 
   {% endblock %}
-      {% block navigation %}
-        <li><a href="{{ path('taller_reparacio_backend_homepage') }}">Inici</a></li>
-          <li><a href="{{ path('taller_reparacio_backend_consultar_clients') }}">Clients</a><li>
-          <li><a href="{{ path('taller_reparacio_backend_consultar_vehicles') }}">Vehicles</a></li>
-          <li><a href="{{ path('taller_reparacio_backend_consultar_reparacions') }}">Reparacions</a></li>
-          <li><a style="color:red;" href="#">Mecànics</a></li>
-          <li><a style="color:red;" href="#">Equip Mecànics</a></li>
-          <li><a href="{{ path('taller_reparacio_frontend_homepage') }}">Logout</a></li>
-      {% endblock %}
+  {% block iniciNav %}
+    <a class="navbar-brand" href="{{ path('taller_reparacio_backend_homepage') }}">Taller reparacions</a>
+  {% endblock %}
+  {% block navigation %}
+    <li><a href="{{ path('taller_reparacio_backend_homepage') }}">Inici</a></li>
+    <li><a href="{{ path('taller_reparacio_backend_consultar_clients') }}">Clients</a><li>
+      <li><a href="{{ path('taller_reparacio_backend_consultar_vehicles') }}">Vehicles</a></li>
+      <li><a href="{{ path('taller_reparacio_backend_consultar_reparacions') }}">Reparacions</a></li>
+      <li><a style="color:red;" href="#">Mecànics</a></li>
+      <li><a style="color:red;" href="#">Equip Mecànics</a></li>
+      <li><a href="{{ path('taller_reparacio_frontend_homepage') }}">Logout</a></li>
+    {% endblock %}
 
-      {% block page_content %}
-        <div class="container">
-          Això és el Backend
-        </div>
-      {% endblock %}
+    {% block page_content %}
+      <div class="container">
+        Això és el Backend
+      </div>
+    {% endblock %}
