--- a/TallerReparacions/app/Resources/views/base.html.twig
+++ b/TallerReparacions/app/Resources/views/base.html.twig
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8" />
-    <title>{% block title %}Taller reparacions!{% endblock %}</title>
+  <meta charset="UTF-8" />
+  <title>{% block title %}Taller reparacions!{% endblock %}</title>
 
-    {% block stylesheets %}
+  {% block stylesheets %}
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    {% endblock %}
+  {% endblock %}
 </head>
 <body>
 
@@ -22,25 +22,27 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Taller reparacions</a>
+        </button>
+        {% block iniciNav %}
+          <a class="navbar-brand" href="#">Taller reparacions</a>
+        {% endblock %}
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           {% block navigation %}{% endblock %}
           </ul>
+        </div>
       </div>
-    </div>
     </nav>
 
     <div id="container">
-        {% block page_content %}
-        {% endblock %}
+      {% block page_content %}
+      {% endblock %}
 
     </div>
     <footer style="margin-top:40px;background-color:#B0C4DE;padding:30px;">
-        <small>© Copyright 2017, Taller Reparacions</small>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+      <small>© Copyright 2017, Taller Reparacions</small>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     </footer>
-</body>
-</html>
+  </body>
+  </html>
