--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/clients.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/clients.html.twig
@@ -17,7 +17,7 @@
             <h2 class="">{{ titol }}</h2>
         </div>
         {% for c in clients %}
-            <div class="col-sm-6 col-lg-3 col-md-4 text-center panel panel-info" style="margin-bottom:20px;">
+            <div class="col-sm-6 col-lg-3 col-md-4 text-center panel panel-info" style="margin-bottom:20px;border:none;">
                 <div class="panel-body">
                     <img class="img-responsive" src={{ c.foto }} style="width:100%;" />
                 </div>
