--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/reparacions.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/reparacions.html.twig
@@ -17,11 +17,13 @@
             <h2 class="">{{ titol }}</h2>
         </div>
         {% for r in reparacions %}
-            <div class="col-sm-6 col-lg-3 col-md-4 text-center">
-                <h3>{{ r.codi }}</h3>
-                <p>{{ r.descripcio }}</p>
-                <a class="btn btn-primary" href="{{ path('taller_reparacio_backend_formEditar_reparacions', {codi:r.codi}) }}">Editar</a>
-                <a class="btn btn-danger" href="{{ path('taller_reparacio_backend_eliminar_reparacions', {codi:r.codi}) }}">Eliminar</a>
+            <div class="col-sm-6 col-lg-3 col-md-4 text-center panel panel-info" style="margin-bottom:20px;border:none;">
+                <div class="panel-heading">
+                    <h3>{{ r.codi }}</h3>
+                    <p>{{ r.descripcio }}</p>
+                    <a class="btn btn-primary" href="{{ path('taller_reparacio_backend_formEditar_reparacions', {codi:r.codi}) }}">Editar</a>
+                    <a class="btn btn-danger" href="{{ path('taller_reparacio_backend_eliminar_reparacions', {codi:r.codi}) }}">Eliminar</a>
+                </div>
             </div>
         {% endfor %}
     </div>
