Modificacions sobre Reparacions crear, no funciona

--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formAfegirClient.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formAfegirClient.html.twig
@@ -20,7 +20,7 @@
 								<option value="{{ v.matricula }}">{{ v.matricula }}</option>
        						{% endfor %}
 						</select><br/><br/>#}
-						Tipus Combustible: <select name="tipusCombustible">
+						Tipus Combustible: <select class="form-control" name="tipusCombustible">
 							<option value="1">Diesel</option>
 							<option value="2">Super 95</option>
 							<option value="3">Gasoil</option>
