--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/reparacioAdded.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/reparacioAdded.html.twig
@@ -28,4 +28,4 @@
 
 MODIFICAR EL REPARACIOADDED I 
 
-I PROVAR EL REPARACIONS.CONTROLLER JAJAJJA, NOMÉS HE FET UN COMMIT
+I PROVAR EL REPARACIONS.CONTROLLER JAJAJJA, HE FET UN PUSHHHH JAJAJA
