--- a/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formCrearReparacio.html.twig
+++ b/TallerReparacions/src/TallerReparacio/BackendBundle/Resources/views/Default/formCrearReparacio.html.twig
@@ -7,15 +7,18 @@
 				<form action="{{ path('taller_reparacio_backend_crear_reparacions') }}" method="post">
 					<div class="form-grup">
 						<h2>Dades Reparació</h2>
-						Codi reparació: <input class="form-control" type="text" name="codi"><br/>
-						Descripció: <input class="form-control" type="text" name="descripcio"></br>
-						Data entrada:<br/>
-						<input type="text" name="dataEntrada" max="2017-01-01"><br/>
-						Data sordia:<br/>
-						<input type="text" name="dataSortida"><br/>
-						Hores dedicades:<br/>
-						<input type="text" name="horesDedicades"><br/>
-						Vehicle (matrícula): <select name="matriculaVehicle">
+						<label>Codi reparació:</label>
+						<input class="form-control" type="text" name="codi"><br/>
+						<label>Descripció:</label>
+						<input class="form-control" type="text" name="descripcio"></br>
+						<label>Data entrada:</label>
+						<input type="text" class="form-control" name="dataEntrada"><br/>
+						<label>Data sordia:</label>
+						<input type="text" class="form-control" name="dataSortida"><br/>
+						<label>Hores dedicades:</label>
+						<input type="number" class="form-control" name="horesDedicades"><br/>
+						<label>Vehicle (matrícula):</label>
+							<select class="form-control" name="matriculaVehicle">
 							{% for v in vehicles %}
 								<option value="{{ v.matricula }}">{{ v.matricula }}</option>
        						{% endfor %}
